# rotors_simulator

./: .gitignore  .gitmodules  README.md
rotors_control/: CMakeLists.txt
rotors_control/src/nodes/: ddp_controller_node.cpp
rotors_description/meshes/: DJIprop.STL  FL2-020-R0.stl  prop1.sldprt.STL  zed.stl
rotors_description/urdf/: DJI.xacro  DJI_base.xacro  DJI_generic_odometry_sensor.gazebo  DJI_with_vi_sensor.gazebo  component_snippets.xacro  component_snippets_MAIN_WITH_CAM_WEIGHTS.xacro  hummingbird_with_vi_sensor.gazebo  iris.xacro  matrice.xacro  matrice_base.xacro  matrice_with_cameras.gazebo  matrice_with_vi_sensor.gazebo  mav_generic_odometry_sensor.gazebo  multirotor_DJI.xacro  multirotor_base.xacro  vi_sensor_base.xacro
rotors_gazebo/: CMakeLists.txt
rotors_gazebo/launch/: DJIgazebo.launch  alpha.launch  alphapilot_mpc.launch  alphapilot_only_mpc.launch  aruco_example.launch  aruco_example_firefly.launch  aruco_example_with_joy.launch  matrice_cameras.launch  matrice_cameras_guidance.launch  matrice_cameras_mpc.launch  mav_autonomous_landing_MPC_vi_sensor.launch  mav_collins_tutorial.launch  mav_ddp_example.launch  mav_empty.launch  mav_hovering_example_MPC.launch  mav_hovering_example_dji_m100.launch  mav_hovering_example_headless.launch  mav_hovering_linearmpc.launch  oa_humm.launch  obstacle_avoidance.launch  obstacle_avoidance_dnn_policy.launch  obstacle_avoidance_lee.launch  obstacle_avoidance_linear.launch  obstacle_avoidance_no_octo.launch  obstacle_avoidance_rviz.launch  obstacle_avoidance_with_joy.launch  pointcloud_testing.launch
rotors_gazebo/models/AlphaPilotGate/: model.config  model.sdf  model_original.sd
rotors_gazebo/models/AlphaPilotGate/Meshes/: AlphaPilotGate.STL
rotors_gazebo/models/aruco_visual_marker_0/: model.sdf
rotors_gazebo/models/aruco_visual_marker_6X6_50_res800_id0/: model.config  model.sdf
rotors_gazebo/models/aruco_visual_marker_6X6_50_res800_id0/materials/scripts/: aruco_visual_marker_6x6_50_res800_id0.material
rotors_gazebo/resource/: DJI.yaml  lee_controller_DJI.yaml  lee_controller_matrice.yaml  matrice.yaml  roll_pitch_yawrate_thrust_controller_DJI.yaml
rotors_gazebo/rviz/: matrice_config.rviz  matrice_config_with_guidance.rviz  obstacle_avoidance.rviz
rotors_gazebo/src/: astar2d.py  astar_data_collection.py  collins_init.cpp  data_collection.py  hovering_example.cpp  image_converter_new.py  landing_sign_detection.py  obstacle_init.cpp  waypoint_publisher_new_automation.cpp
rotors_gazebo/worlds/: aruco.world  ob.world  obstacle.world  obstacle_column.world  obstacle_new.world  obstacle_two.world  obstacle_wall_goal.world  obstacle_with_walls.world  track1.world
rotors_joy_interface/: CMakeLists.txt
rotors_joy_interface/src/: joy.cpp
